LLM4Config/assets/banzaicloud-stable_uistio.yaml
---
# Source: uistio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-uistio
  labels:
    app.kubernetes.io/name: uistio
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: uistio
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http-app
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uistio
    app.kubernetes.io/instance: my-uistio
---
# Source: uistio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-uistio
  labels:
    app.kubernetes.io/name: uistio
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: uistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uistio
      app.kubernetes.io/instance: my-uistio
      app.kubernetes.io/component: application
      app.kubernetes.io/part-of: uistio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uistio
        helm.sh/chart: uistio-0.0.12
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-uistio
        app.kubernetes.io/version: 0.3.10
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: uistio
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "10000"
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: uistio
      containers:
        - name: uistio
          image: "banzaicloud/uistio:master"
          imagePullPolicy: Always
          ports:
            - name: http-app
              containerPort: 8000
              protocol: TCP
            - name: instrumentation
              containerPort: 10000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /version
              port: instrumentation
          readinessProbe:
            httpGet:
              path: /healthz
              port: instrumentation
---
# Source: uistio/templates/disable-mtls-uistio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-uistio-uistio
  labels:
    app.kubernetes.io/name: uistio-uistio
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/part-of: uistio
spec:
  host: uistio.default
  trafficPolicy:
    tls:
      mode: DISABLE
---
# Source: uistio/templates/multicluster-prometheus-workaround.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-uistio-prometheus
  labels:
    app.kubernetes.io/name: uistio-prometheus
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/part-of: uistio
spec:
  host: prometheus.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
# Source: uistio/templates/multicluster-prometheus-workaround.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: my-uistio-prometheus
  labels:
    app.kubernetes.io/name: uistio-prometheus
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/part-of: uistio
spec:
  hosts:
  - prometheus.default.svc.cluster.local
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
  endpoints:
  - address: prometheus
---
# Source: uistio/templates/multicluster-prometheus-workaround.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-uistio-prometheus
  labels:
    app.kubernetes.io/name: uistio-prometheus
    helm.sh/chart: uistio-0.0.12
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-uistio
    app.kubernetes.io/version: 0.3.10
    app.kubernetes.io/part-of: uistio
spec:
  hosts:
  - prometheus
  http:
  - route:
    - destination:
        host: prometheus.default.svc.cluster.local
